--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -1,6 +1,7 @@
 
 .mynav {
     background-color: rgba(255,255,255,0.3);
+    font-size: 16px;
 
 
     .link:hover {
@@ -9,7 +10,7 @@
     
 
     .logo {
-        width: 50px;
+        width: 34px;
         margin-left: 30px;
 
         img {
