--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -3,8 +3,8 @@
 
 .about {
     padding-top: 20px;
+    font-family: 'Kalam', cursive;
     h2 {
-        font-family: 'Kalam', cursive;
         margin: 20px;
         @media (max-width: 599px){
             padding: 0;
@@ -12,11 +12,16 @@
         
     }
     p {
-        font-size: 1em;
+        font-size: 1.4em;
+        margin: 60px 0;
+        padding: 20px;
+        background-color: rgba(255,255,255,0.6);
     }
     & > div {
         width: 360px;
         margin: 60px auto;
+        
+        
         @media (max-width: 599px){
             width: 200px;
         }
