--- a/src/components/productdetails/productdetails.scss
+++ b/src/components/productdetails/productdetails.scss
@@ -20,6 +20,8 @@
             display: flex;
             flex-direction: column;
             text-align: left;
+            font-size: 0.9em;
+            line-height: 1.2em;
     
             @media (max-width: 400px){
                 margin: 0;
@@ -60,7 +62,7 @@
             img {
                 width: 100%;
                 border-radius: 5px;
-                box-shadow: 0px 5px 3px rgba(62, 62, 65, 0.8);
+                box-shadow: 15px 15px 15px rgba(62, 62, 65, 0.8);
             }
         }
     }
